--- a/bodaGemmaMario/amplify.yml
+++ b/bodaGemmaMario/amplify.yml
@@ -3,6 +3,12 @@ frontend:
   phases:
     build:
       commands:
+        - npm install
         - npm run build
   artifacts:
     baseDirectory: /
+    files:
+      - '**/*'
+  cache:
+    paths:
+      - node_modules/**/*
