--- a/bodaGemmaMario/amplify.yml
+++ b/bodaGemmaMario/amplify.yml
@@ -1,14 +1,13 @@
 version: 1
 frontend:
   phases:
+    # IMPORTANT - Please verify your build commands
     build:
-      commands:
-        - npm install
-        - npm run build
+      commands: []
   artifacts:
+    # IMPORTANT - Please verify your build output directory
     baseDirectory: /
     files:
       - '**/*'
   cache:
-    paths:
-      - node_modules/**/*
+    paths: []
